# CineReserve-API

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  render.yml
.github/workflows/: ci.yml
cinema/: models.py  selectors.py  serializers.py  urls.py  views.py
cinema/management/commands/: seed_cinema.py
cinema/migrations/: 0001_initial.py
core/: celery.py  settings.py  urls.py
docs/: e2e_test.sh
load_tests/: locustfile.py
tests/: conftest.py  test_cinema.py  test_setup.py  test_ticketing.py  test_users.py
ticketing/: models.py  serializers.py  services.py  tasks.py  urls.py  views.py
ticketing/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
